--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -23,3 +23,29 @@
 .bg-dark-blue {
   background: #3b5998;
 }
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
+  font-weight: 700;
+  color: #4f4f4f;
+}
+.panel {
+  border: 1px solid rgb(240, 240, 240);
+  box-shadow: none;
+  border-radius: 1px;
+}
+.panel-body {
+  padding: 0;
+}
+.panel-heading {
+  h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+  }
+}
+.panel-default > .panel-heading {
+  background-color: rgb(252, 252, 252);
+  border-bottom: 1px solid rgb(240, 240, 240);
+}
+body {
+  color: #777777;
+  font-size: 14px;
+}
