--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,3 +2,6 @@
  * CSS code specific to home page
  * (margin/padding adjustments)
  * ------------------------------------- */
+body {
+  background-color: #F5F5F5;
+}
