--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -29,9 +29,13 @@ h1, h2, h3, h4, h5, h6,
   color: #4f4f4f;
 }
 .panel {
-  border: 1px solid rgb(240, 240, 240);
+  border: none;//1px solid rgb(240, 240, 240);
+  border-top: 1px solid rgb(240, 240, 240);
+  border-left: 1px solid rgb(240, 240, 240);
+  border-right: 1px solid rgb(240, 240, 240);
   box-shadow: none;
   border-radius: 1px;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.07);
 }
 .panel-body {
   padding: 0;
