handled click on create_message component

--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -1,7 +1,7 @@
 /* Main class */
 .navbar-wagon {
   border-bottom: 1px solid rgb(240, 240, 240);
-  background: #fcfcfc;
+  background: white;
   transition: all 0.3s ease;
   margin-bottom: 15px;
   .container {
