--- a/app/assets/stylesheets/components/_badges.scss
+++ b/app/assets/stylesheets/components/_badges.scss
@@ -36,3 +36,13 @@
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
 }
+.small-badge {
+  border-radius: 50%;
+  font-size: 0px;
+  padding: 4px;
+  display: inline-block;
+  background-color: #22A7F0;
+}
+.small-badge-off {
+  background-color: #edefed !important;
+}
