handled textarea to behave a lil like slack

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 // Graphical variables
 @import "config/variables";
 @import "config/bootstrap_variables";
+@import "config/markdown";
 
 // External libraries
 @import "bootstrap-sprockets";
