--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,7 @@
 @import "bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import "pygments/default"; // Themes: https://github.com/vicentereig/sass-pygments-rails/tree/master/vendor/assets/stylesheets/pygments
 
 // Your CSS
 @import "layout/index";
