working on older messages loading

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -31,6 +31,10 @@ $blue: #469AE0;
 $yellow: #FDB631;
 $orange: #E67E22;
 $green: #32B796;
+$light-blue: #F2F9FC;
+$dark-blue: #3A5795;
+$background-grey: #FAFAFA;
+$hover-grey: #FBFBFB;
 
 // Gray scale
 $gray-darker:  lighten(#000, 13.5%); // #222
